--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "next": "14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,4 +25,3 @@
     "typescript": "^5.3.3"
   }
 }
-
